# common

./: CMakeLists.txt
include/common/: output.hpp
tests/: CMakeLists.txt  test_compare.cpp  test_output.cpp
